Fixed cards to diplay full image on mobile.

--- a/css/layout.css
+++ b/css/layout.css
@@ -34,7 +34,7 @@
   flex-basis: 100%;
 }
 
-.nowrap {
+.nav-buttons {
   flex-wrap: nowrap;
 }
 
@@ -59,5 +59,9 @@
 
   .card-img {
     flex-basis: 50%;
+  }
+
+  .nowrap {
+    flex-wrap: nowrap;
   }
 }
